src/main/java/com/example/soulware_week1/global/error/exception/AuthGroupException.java
package com.example.soulware_week1.global.error.exception;

public abstract class AuthGroupException extends RuntimeException {
    public AuthGroupException(String message) {
        super(message);
    }
}
